server/compilers/goLiteJS/src/test/ml1/valid/top11.go
// top level declaration permutations
package main

type num int

func f(){}
