server/compilers/goLiteJS/src/test/ml1/invalid/func11.go
// missing right parenthesis
package main

func f( {
    return
}
